poke/testsuite/poke.pkl/offset-type-diag-5.pk
/* { dg-do compile } */

/* Offset types only work on complete types.  */

defvar N = 2;
deftype List = int[N];

defun foo = (offset<int,List> input, /* { dg-error "on complete types" } */
             int len) int:
{
    defvar ret = 0;
    return ret;
}
